# dearmep

./: .editorconfig  .flake8  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  apply-reuse.sh  do-apply-reuse.sh  example-config.yaml  pyproject.toml  setup.cfg  test.sh
.github/workflows/: backend-tests.yaml  build.yaml  dco.yaml  frontend-tests.yaml  reuse.yaml  tests.yaml
LICENSES/: LicenseRef-DCO-1.1.txt
callament/: config.py  elks_experiment.py  l10n.py  main.py  metrics.py  models.py
callament/api/: v1.py
client/: .eslintrc.json  .gitignore  README.md  angular.json  angular.json.license  cypress.config.ts  package-lock.json  package.json  package.json.license  proxy.conf.json  proxy.conf.json.license  transloco.config.js  tsconfig.json
client/cypress/e2e/: app-initialization.cy.ts
client/cypress/support/: commands.ts  e2e.ts
client/scripts/: bundle-assets.js  dear-mep.js
client/src/: index.html  main.ts
client/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.initializer.ts  app.module.ts  transloco-root.module.ts  transloco.providers.ts
client/src/app/calling/: calling.component.html  calling.component.scss  calling.component.spec.ts  calling.component.ts  calling.module.ts
client/src/app/common/: app-common.module.ts
client/src/app/components/: components.module.ts
client/src/app/model/: calling-step.enum.ts  day-of-week.enum.ts  phone-number.model.ts  time-of-day.ts
client/src/app/testing/: fixtures.module.ts  testing-config.ts  testing.module.ts  transloco-testing.module.ts
client/src/environments/: environment.development.ts  environment.ts
client/src/style/: dear-mep-inner.scss  dear-mep.scss  styles.scss
client/src/style/themes/: default-dark.scss  variables.scss
client/test-page/: index.html
contrib/: strings2excel.py
dearmep/: __init__.py  config.py  database.py  dump_openapi.py  example-config.yaml  http_client.py  l10n.py  logging.yaml  main.py  models.py  progress.py  util.py
dearmep-client/: .gitignore  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
dearmep-client/scripts/: bundle-assets.js
dearmep-client/src/: index.html  styles.scss
dearmep-client/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  transloco-root.module.ts
dearmep-client/src/app/calling/: calling-routing.module.ts  calling.component.html  calling.component.spec.ts  calling.component.ts  calling.module.ts
dearmep-client/src/app/common/: app-common.module.ts  common.module.ts
dearmep-client/src/app/components/: components.module.ts
dearmep-client/src/app/layout/: layout.module.ts
dearmep-client/src/app/model/: calling-step.enum.ts  country.model.ts  day-of-week.enum.ts  phone-number.model.ts
dearmep-client/src/app/services/: time.service.spec.ts  time.service.ts
dearmep-client/src/app/testing/: testing.module.ts  (+1 more)
dearmep-client/src/style/: styles.scss
dearmep-client/test-page/: dear-mep.js  index.html
dearmep-web/: README.md  angular.json  package-lock.json  package.json
dearmep-web/src/: index.html
dearmep-web/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  transloco-root.module.ts
dearmep/api/: v1.py
dearmep/cli/: __init__.py  check.py  convert.py  db.py  dump.py  importing.py  serve.py  version.py
dearmep/convert/: csv.py  dump.py  json.py  tabular.py  util.py  xml.py
dearmep/convert/europarl/: portrait.py  rollcallvote.py
dearmep/convert/parltrack/: mep.py
dearmep/database/: __init__.py  connection.py  importing.py  models.py  query.py
dearmep/static_files/: __init__.py  demo.html
doc/: api.md  data-conversion.md  data-protection.md  dco.txt  glossary.md  ivr.md  metrics.md  scheduler.md  security.md  selecting-destinations.md  theming.md
doc/img/: dear-mep-talk-thumb.png.license
doc/ivr/: .gitignore  compile_messages.py  messages.csv  messages.csv.license
server/: .gitignore  Makefile  README.md  alembic.ini  build-db.sh  poetry.lock.license  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  test.sh
server/dearmep/: config.py  elks_experiment.py  example-config.yaml  http_client.py  l10n.py  logging.yaml  main.py  markdown_files.py  models.py  progress.py  ratelimit.py  types.py  util.py
server/dearmep/api/: authtoken.py  v1.py
server/dearmep/cli/: __init__.py  check.py  convert.py  db.py  dump.py  importing.py  serve.py  version.py
server/dearmep/convert/: __init__.py  audio.py  blobfile.py  dump.py  ffmpeg.py  image.py  lz.py  tabular.py  xml.py  zstd.py
server/dearmep/convert/europarl/: media.py  portrait.py  rollcallvote.py
server/dearmep/convert/parltrack/: mep.py
server/dearmep/database/: __init__.py  connection.py  importing.py  lint.py  models.py  query.py
server/dearmep/phone/: abstract.py  developer_phone.py  elks.py  elks_phone.py  ivr.py  ivr_audio.py
server/dearmep/phone/elks/: __init__.py  elks.py  metrics.py  models.py  ongoing_calls.py  utils.py
server/dearmep/schedules/: __init__.py  calls.py
server/dearmep/static_files/: __init__.py  demo.html
server/example-markdown/docs/privacy/: de.md  en.md  fr.md  pt.md  sv.md
server/example-markdown/templates/: default.html.jinja
server/migrations/: env.py
server/migrations/versions/: 20231121-8d7e440490bf_inital_alembic_database_state.py  20231201-62bdc70736c6_add_scheduled_calls_and_scheduled_calls_.py  20231206-fba7d048d5c7_add_scheduled_calls_and_queued_calls_.py  20231214-5d2aefe5f0ad_add_scheduler_relevant_tables.py
server/tests/: conftest.py  test_config.py  test_l10n.py  test_metrics.py  test_ongoing_calls.py  test_phonenumbers.py  test_token.py
server/tests/api/: test_api_destinations_suggested.py  test_api_destinations_suggested_config.yaml  test_api_l10n.py  test_number_verification.py
server/tests/geo_ip/: README.md  create_test_db.py  test.mmdb
tests/: conftest.py  test_config.py  test_example.py  test_l10n.py  test_metrics.py
tests/api/: test_api_l10n.py
tests/geo_ip/: create_test_db.py  test.mmdb
(+193 files in other folders)
