[tool.poetry]
name = "DearMEP"
version = "0.0.1"
description = "DearMEP helps people contact their representatives."
authors = ["Tim Weber"]
license = "AGPL-3.0"

[tool.poetry.scripts]
dearmep-openapi-spec = "dearmep.dump_openapi:cli"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87"
prometheus-fastapi-instrumentator = "^5.9.1"
maxminddb = "^2.2.0"
PyYAML = "^6.0"
limits = "^2.7.0"
lzip = "^1.2.0"
rich = "^13.3.2"
countryguess = "^0.3.0"
defusedxml = "^0.7.1"
httpx = ">=0.23"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.18.2"}
flake8 = "^4.0.1"
flake8-quotes = "^3.3.1"
mypy = "<1.0"
pytest = "^7.1.2"
pytest-cov = "^4"
requests = "^2.28.1"
py-mmdb-encoder = "^1.0.4"
types-PyYAML = "^6.0.11"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
