[tool.poetry]
name = "DearMEP"
version = "0.1.0-dev.9999999999"
description = "DearMEP helps people contact their representatives."
authors = ["Tim Weber"]
license = "AGPL-3.0"
# Include the frontend, see <https://github.com/python-poetry/poetry/issues/2809>
include = ["dearmep/static_files/static/**/*"]

[tool.poetry.scripts]
dearmep = "dearmep.cli:run"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
PyYAML = "^6.0"
limits = "^3.3.1"
lzip = "^1.2.0"
rich = "^13.3.2"
countryguess = "^0.3.0"
defusedxml = "^0.7.1"
httpx = ">=0.23"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-geoacumen = ">=2023"
starlette-exporter = "^0.15.1"
sqlmodel = "^0.0.8"
eralchemy2 = {version = "^1.3.7", optional = true}
csvkit = {version = "*", optional = true}
visidata = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-quotes = "^3.3.1"
mypy = "<1.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
py-mmdb-encoder = "^1.0.4"
types-PyYAML = "^6.0.11"
httpx = "^0.23.1"
types-attrs = "^19.1.0"
types-maxminddb = "^1.5.0"

[tool.poetry.extras]
convert = ["csvkit", "visidata"]
specs = ["eralchemy2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
