# SPDX-FileCopyrightText: © 2022 Tim Weber
# SPDX-FileCopyrightText: © 2023 Jörn Bethune
# SPDX-FileCopyrightText: © 2023 iameru
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "DearMEP"
version = "4.0.0-dev.9999999999"
description = "DearMEP helps people contact their representatives."
requires-python = ">=3.8,<4"
authors = [
	{name = "Tim Weber"},
]
classifiers = [
	"License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "alembic==1.12.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "anyio==3.6.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "backoff==2.2.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "canonicaljson==2.0.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "certifi==2022.9.24 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "cffi==1.15.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "charset-normalizer==2.1.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "click==8.1.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "colorama==0.4.6 ; (python_full_version >= '3.8' and python_full_version < '4.0' and sys_platform == 'win32') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_system == 'Windows')",
    "countryguess==0.3.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "cryptography==41.0.4 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "defusedxml==0.7.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "deprecated==1.2.13 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "ecdsa==0.18.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "fastapi-restful==0.5.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "fastapi==0.95.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "greenlet==3.0.3 ; (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'AMD64') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'WIN32') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'aarch64') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'amd64') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'ppc64le') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'win32') or (python_full_version >= '3.8' and python_full_version < '4.0' and platform_machine == 'x86_64')",
    "h11==0.14.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "httpcore==0.16.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "httptools==0.6.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "httpx==0.23.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "idna==3.4 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "importlib-metadata==6.6.0 ; python_full_version == '3.8.*'",
    "importlib-resources==5.12.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "jinja2==3.1.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "limits==3.3.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "lzip==1.2.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "mako==1.3.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "markdown-it-py==2.2.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "markupsafe==2.1.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "maxminddb==1.5.4 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "mdurl==0.1.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "packaging==21.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "phonenumbers==8.13.22 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pillow==9.5.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "prometheus-client==0.15.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "psutil==5.9.6 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pyasn1==0.5.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pycparser==2.21 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pydantic==1.10.19 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pygments==2.14.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pyparsing==3.0.9 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "python-dotenv==1.0.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "python-geoacumen==2023.4.23 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "python-jose[cryptography]==3.3.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "python-multipart==0.0.7 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pytz==2023.3.post1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pyyaml==6.0.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "ratelimit==2.2.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "requests==2.31.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "rfc3986[idna2008]==1.5.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "rich==13.4.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "rsa==4.9 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "setuptools==67.6.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "six==1.16.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "sniffio==1.3.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "sqlalchemy2-stubs==0.0.2a34 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "sqlalchemy==1.4.41 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "sqlmodel==0.0.8 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "starlette-exporter==0.15.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "starlette==0.26.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-pyasn1==0.4.0.6 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-python-jose==3.3.4.8 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "typing-extensions==4.9.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "urllib3==1.26.12 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "uvicorn[standard]==0.21.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "uvloop==0.19.0 ; python_full_version >= '3.8' and python_full_version < '4.0' and platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "watchfiles==0.18.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "websockets==10.4 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "wrapt==1.14.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "zipp==3.15.0 ; python_full_version >= '3.8' and python_full_version < '3.10'",
]

[dependency-groups]
dev = [
    "anyio==3.6.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "certifi==2022.9.24 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.8' and python_full_version < '4.0' and sys_platform == 'win32'",
    "coverage[toml]==7.2.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "exceptiongroup==1.0.4 ; python_full_version >= '3.8' and python_full_version < '3.11'",
    "h11==0.14.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "httpcore==0.16.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "httpx==0.23.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "idna==3.4 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "iniconfig==1.1.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "mypy-extensions==0.4.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "mypy==0.991 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "packaging==21.3 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pluggy==1.0.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "py-mmdb-encoder==1.0.4 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pyparsing==3.0.9 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pytest-cov==4.0.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "pytest==7.3.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "rfc3986[idna2008]==1.5.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "ruff==0.8.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "sniffio==1.3.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "tomli==2.0.1 ; python_full_version >= '3.8' and python_full_version <= '3.11'",
    "types-attrs==19.1.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-defusedxml==0.7.0.20240218 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-ipaddress==1.0.8 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-maxminddb==1.5.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-pillow==9.5.0.5 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-pytz==2023.3.1.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-pyyaml==6.0.12.2 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-requests==2.31.0.1 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "types-urllib3==1.26.25.13 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "typing-extensions==4.9.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
]

[project.scripts]
dearmep = "dearmep.cli:run"

[project.optional-dependencies]
# Pretty loose version requirements in the `convert` extra for dependencies not
# used in code, which are only here for interactive use by someone setting up a
# campaign. Tighter version constraints for things used in an actual script.
convert = [
    "csvkit>=2",
    "visidata>=3",
    "xlsxwriter~=3.1",
]
specs = [
    "eralchemy2~=1.4",
]

[tool.uv]
package = true

[tool.setuptools]
# Only "dearmep" is a package, not tests or migrations.
packages = ["dearmep"]

# Include the frontend, see <https://github.com/python-poetry/poetry/issues/2809>
# include = ["dearmep/static_files/static/**/*"]

[tool.mypy]
packages = ["dearmep", "tests"]
python_version = "3.8"
warn_return_any = true

[tool.pytest.ini_options]
addopts = "--strict-markers --junit-xml=report.xml --cov-report=term --cov-report=xml --cov=dearmep"
markers = [
	"config_path: set a custom config YAML file name",
	"config_content: set custom config YAML data",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py38"  # when changing this, check below whether some rules can be re-enabled
exclude = [
	".git",
	"migrations",
]

[tool.ruff.format]
line-ending = "lf"
# The following settings are the defaults anyway.
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
preview = true
select = [
	"ANN",     # flake8-annotations
	"ARG",     # flake8-unused-arguments
	"ASYNC",   # flake8-async
	"B",       # flake8-bugbear
	"C4",      # flake8-comprehensions
	"C90",     # mccabe complexity
	"DTZ",     # flake8-datetimez (naive datetimes)
	"E",       # pycodestyle errors
	"ERA",     # eradicate (commented-out code)
	"EXE",     # flake8-executable (shebang lines)
	"F",       # pyflakes
	"FA",      # flake8-future-annotations
	"FURB",    # refurb
	"I",       # isort
	"INP",     # flake8-no-pep420 (implicit namespace package)
	"ISC",     # flake8-implicit-str-concat
	"LOG",     # flake8-logging
	"N",       # pep8-naming
	"PL",      # pylint
	"PT",      # flake8-pytest-style
	"PTH",     # flake8-use-pathlib
	"Q",       # flake8-quotes
	"RET",     # flake8-return
	"RSE",     # flake8-raise
	"RUF",     # Ruff-specific rules
	"S",       # flake8-bandit (security)
	"SIM",     # flake8-simplify
	"SLF",     # flake8-self (private member access)
	"SLOT",    # flake8-slots
	"TCH",     # flake8-type-checking
	"TRY",     # tryceratops
	"T20",     # flake8-print
	"UP",      # pyupgrade
	"W",       # pycodestyle warnings
]
ignore = [
	"ISC001",   # conflict w/ formatter, see https://github.com/astral-sh/ruff/issues/8272
	"PLC0415",  # forbids dynamic imports
	"PT006",    # forbids comma-separated string for @pytest.mark.parametrize names
	"PT007",    # forbids non-list types for @pytest.mark.parametrize values
	"RUF001",   # complains about Unicode typography in strings
	"RUF002",   # complains about Unicode typography in docstrings
	"RUF200",   # requires a name for projects
	"TRY003",   # complains about simple ValueError messages
	# to be re-enabled when minimum Python version is >= 3.9
	"UP006",    # suggests stdlib generic collection annotations (list[...]), which can confuse Python < 3.9
	# to be re-enabled when minimum Python version is >= 3.10
	"FA100",    # suggests `from __future__ import annotations`, which causes trouble in SQLModel <https://github.com/tiangolo/sqlmodel/issues/196>
	"UP007",    # suggests X | Y annotations, which can confuse Python < 3.10
]

[tool.ruff.lint.flake8-annotations]
# Allow __init__ to omit the `-> None` return type declaration.
mypy-init-return = true

[tool.ruff.lint.flake8-bugbear]
# Allow FastAPI's request data type hints as default arguments in functions.
extend-immutable-calls = ["fastapi.Form", "fastapi.Query"]

[tool.ruff.lint.isort]
# Two blank lines after the imports.
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# Tell Ruff that Pydantic's @validator decorator expects a class method.
# See <https://github.com/astral-sh/ruff/issues/2151>.
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
	"ANN001",  # missing function argument annotation
	"ANN201",  # missing return type annotation
	"ARG001",  # unused function argument (e.g. require-only fixtures)
	"INP001",  # implicit namespace package
	"S101",    # use of assert
]
